src/test/deca/context/invalid/access_var_declared_in_other_method.deca
/*
    Description : Accès à une variable déclarée dans une autre méthode

    Résultat : Erreur contextuelle
*/
class A{
    void y(){
        int x = 10;
    }

    void z(){
        x = 12;
    }
}
        
